@@ -69,10 +69,6 @@
 #
 #MAX_Q_RUNNERS_LAUNCH		10
 
-# How often the master queue scheduler tries to read the disk, in seconds.
-#
-#DISK_READ_PERIOD		300
-
 # The minimum amount of time the master queue runner will work between disk
 # reads, in seconds.
 #
